--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "stop": "taskkill -F -IM node.exe"
   },
   "author": "Sandeep Raveesh",
